--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,7 @@ core
 *.swo
 
 lib
-bin/*.exe
-bin/*.dll
+bin/*
 bin-x64/*.dll
 bin-x86/*.dll
 openjdk/*.dll
@@ -60,3 +59,6 @@ openjdk/AssemblyInfo.java
 openjdk/MANIFEST.MF
 openjdk/java/lang/PropertyConstants.java
 openjdk/resources/nashorn/version.properties
+
+#rider
+.idea/
