--- a/ikvmc/ikvmc.csproj
+++ b/ikvmc/ikvmc.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net461;netcoreapp3.1</TargetFrameworks>
+    <TargetFrameworks>netcoreapp3.1</TargetFrameworks>
     <OutputPath>..\bin\$(Configuration)</OutputPath>
     <DefineConstants>$(DefineConstants);STATIC_COMPILER;EMITTERS</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
